# TinaOpencv

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tina/tinaopencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: macro.h  native-lib.cpp
app/src/main/java/com/tina/tinaopencv/: CameraHelper.java  MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/tina/tinaopencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
